@@ -1,3 +1,8 @@
+2013-12-30 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/DKArgument.m: Improve validity checking on object
+	paths.
+
 2013-07-10 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Source/DKOutgoingProxy.m: Add missing include. (Reported by Philippe Roussell)
